// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 cFvgas"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 ganrTc"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 cZXAHv"
  >
    <li
      class="profiles__Item-sc-bxtkkv-5 iRcZAV"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 dpJZVU"
        data-testid="profile-picture"
        src="/images/users//images.karl.png.png"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 fgOtFT"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 cFvgas"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 ganrTc"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 cZXAHv"
  >
    <li
      class="profiles__Item-sc-bxtkkv-5 iRcZAV"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 dpJZVU"
        data-testid="profile-picture-misc"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 fgOtFT"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
